force-app/main/default/objects/Funding__c.object
<CustomObject>
    <description>This is to store multi-funder records associated with research applications (enterprise Opportunities)</description>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <description>Engage Enterprise - The amount being requested from the funder. For PURE records, this is the cash contribution being requested.</description>
        <inlineHelpText>The amount being requested from the funder. For PURE records, this is the cash contribution being requested</inlineHelpText>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_ID__c</fullName>
        <description>Engage Enterprise - Award Id.</description>
        <label>Award ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Id_Formula__c</fullName>
        <description>Displays the Opportunity&apos;s PURE Award ID</description>
        <formula>Opportunity__r.PURE_Award_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_Amount__c</fullName>
        <description>Engage Enterprise - The amount that the funder has agreed to contribute.</description>
        <inlineHelpText>The amount that the funder has agreed to contribute.</inlineHelpText>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Engage Enterprise - Monash&apos;s monetary contribution as part of overall cost.</description>
        <inlineHelpText>Monash&apos;s monetary contribution as part of overall cost.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Engage Enterprise - Monash&apos;s monetary contribution as part of overall cost, displayed as a percentage.</description>
        <inlineHelpText>Monash&apos;s monetary contribution as part of overall cost, displayed as a percentage.</inlineHelpText>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <description>Engage Enterprise - Funder account associated to the Opportunity.</description>
        <label>Funder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fundings</relationshipLabel>
        <relationshipName>Funders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Category_Description__c</fullName>
        <description>Engage Enterprise - Funding category description.</description>
        <inlineHelpText>Funding category description.</inlineHelpText>
        <label>Funding Category Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Competitive Grants</fullName>
                </value>
                <value>
                    <fullName>Other Public Sector Research Income</fullName>
                </value>
                <value>
                    <fullName>Industry and Other Research Income</fullName>
                </value>
                <value>
                    <fullName>CRC Research Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Category__c</fullName>
        <description>Engage Enterprise - HERDC Funding category.</description>
        <inlineHelpText>HERDC Funding category.</inlineHelpText>
        <label>Funding Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
                <value>
                    <fullName>Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Description__c</fullName>
        <description>Engage Enterprise - Details of the in kind contribution (Pure records).</description>
        <inlineHelpText>Details of the in kind contribution (Pure records).</inlineHelpText>
        <label>Funding Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <description>The funding Opportunity name listed in Pure</description>
        <label>Funding Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Scheme__c</fullName>
        <description>Engage Enterprise - Name of the formal program/scheme under which the funding is being provided.</description>
        <inlineHelpText>Name of the formal program/scheme under which the funding is being provided.</inlineHelpText>
        <label>Funding Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Engage Enterprise - Funding opportunity type.</description>
        <inlineHelpText>Funding opportunity type.</inlineHelpText>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Non-Financial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Kind_Amount__c</fullName>
        <description>Engage Enterprise - The value of the non cash contribution being provided by the funder.</description>
        <inlineHelpText>The value of the non cash contribution being provided by the funder.</inlineHelpText>
        <label>In Kind Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Organisation_Indicator__c</fullName>
        <description>Engage Enterpise - Identifies whether Monash is the lead or auspicing organisation.</description>
        <inlineHelpText>Identifies whether Monash is the lead or auspicing organisation.</inlineHelpText>
        <label>Lead Organisation Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collaboration - Monash Led</fullName>
                </value>
                <value>
                    <fullName>Collaboration - Non-Monash Led</fullName>
                </value>
                <value>
                    <fullName>No Collaboration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Engage Enterprise - Who are the funders associated to the Opportunity.</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Enterprise</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fundings</relationshipLabel>
        <relationshipName>Fundings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PURE_Application_ID__c</fullName>
        <description>Engage Enterprise - Pure Application ID</description>
        <label>PURE Application ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Funder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Engage Enterprise - Flag if account is primary funder.</description>
        <label>Primary Funder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>Engage Enterprise - Relationship type with organisation.</description>
        <inlineHelpText>Relationship type with organisation.</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External Organisation</fullName>
                </value>
                <value>
                    <fullName>Internal Organisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <description>Enterprise - External Id</description>
        <externalId>true</externalId>
        <label>UID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funding</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fundings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Awarded_Amount_Validation</fullName>
        <active>true</active>
        <description>Awarded amount can only be populated during negotiation and close stage.</description>
        <errorConditionFormula>AND(
    NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c), 
    Awarded_Amount__c &gt; 0,
 
        NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Negotiation/Review&apos;)),
        NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Closed Won&apos;)),
        NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Closed Lost&apos;))
   
)</errorConditionFormula>
        <errorDisplayField>Awarded_Amount__c</errorDisplayField>
        <errorMessage>Awarded Amount can only be populated when Opportunity stage is ‘Negotiation/Review’ or ‘Closed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Funder_Validation</fullName>
        <active>true</active>
        <description>Only one primary funder allowed per opportunity</description>
        <errorConditionFormula>AND(NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c), Opportunity__r.Primary_Funder_Count__c &gt; 0, OR(AND(ISCHANGED(Primary_Funder__c), Primary_Funder__c), AND(ISNEW(), Primary_Funder__c)))</errorConditionFormula>
        <errorMessage>A funding record already exists as a primary funder, uncheck the primary funder field to proceed</errorMessage>
    </validationRules>
</CustomObject>